[package]
name = "futil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
html = "0.6.2"
image = "0.25.5"
include_dir = "0.7.4"
itertools = "0.13.0"
regex = "1.10.0"
